--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,6 @@
 {
   "{src,modules}/**/*.{js,ts,jsx,tsx,html}": [
-    
+    "nx affected:lint --fix=true --uncommitted",
     "nx affected:test",
     "nx format:write --uncommited"
   ]
