--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ecommerce-map-2/layout": ["modules/feature/layout/src/index.ts"]
+      "@ecommerce-map-2/layout": ["modules/feature/layout/src/index.ts"],
+      "@ecommerce-map-2/product-data-access": [
+        "modules/data-access/product/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
