--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,8 @@
       ],
       "@ecommerce-map-2/product-search": [
         "modules/feature/product/search/src/index.ts"
-      ]
+      ],
+      "@ecommerce-map-2/product-ui": ["modules/ui/product/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
